--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=config-default
 eureka.instance.client.fetch-registry=true
 eureka.instance.client.register-with-eureka=true
 eureka.instance.client.service-url.defaultZone=http://localhost:8761/eureka
