--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,5 @@
 spring.application.name=config-dev
+spring.profiles=dev
 eureka.instance.client.fetch-registry=true
 eureka.instance.client.register-with-eureka=true
 eureka.instance.client.service-url.defaultZone=http://localhost:8761/eureka
